--- a/src/main/webapp/css/virkailija.css
+++ b/src/main/webapp/css/virkailija.css
@@ -3059,7 +3059,7 @@ ul.orgmenu {
       top: 50%;
       height: 0;
       width: 0; }
-      #toolbartoggle-btn-container #toolbartoggle-btn .toolbartext-position .toggle-btn-text {
+      #toolbartoggle-btn-container #toolbartoggle-btn .toolbartext-position span {
         display: block;
         color: #149ecb;
         transform: rotate(-90deg);
@@ -3069,7 +3069,7 @@ ul.orgmenu {
         -webkit-transform-origin: 0;
         -o-transform-origin: 0;
         width: 150px; }
-        #toolbartoggle-btn-container #toolbartoggle-btn .toolbartext-position .toggle-btn-text:before, #toolbartoggle-btn-container #toolbartoggle-btn .toolbartext-position .toggle-btn-text:after {
+        #toolbartoggle-btn-container #toolbartoggle-btn .toolbartext-position span:before, #toolbartoggle-btn-container #toolbartoggle-btn .toolbartext-position span:after {
           position: absolute;
           font-size: 9px;
           transform-origin: 50% 50%;
@@ -3083,11 +3083,11 @@ ul.orgmenu {
           -ms-transform: rotate(90deg);
           -o-transform: rotate(90deg);
           content: '<<'; }
-        #toolbartoggle-btn-container #toolbartoggle-btn .toolbartext-position .toggle-btn-text:before {
+        #toolbartoggle-btn-container #toolbartoggle-btn .toolbartext-position span:before {
           left: -30px; }
-        #toolbartoggle-btn-container #toolbartoggle-btn .toolbartext-position .toggle-btn-text:after {
+        #toolbartoggle-btn-container #toolbartoggle-btn .toolbartext-position span:after {
           left: 105px; }
-        #toolbartoggle-btn-container #toolbartoggle-btn .toolbartext-position .toggle-btn-text.minimized:before, #toolbartoggle-btn-container #toolbartoggle-btn .toolbartext-position .toggle-btn-text.minimized:after {
+        #toolbartoggle-btn-container #toolbartoggle-btn .toolbartext-position span.minimized:before, #toolbartoggle-btn-container #toolbartoggle-btn .toolbartext-position span.minimized:after {
           transform: rotate(-90deg);
           -webkit-transform: rotate(-90deg);
           -moz-transform: rotate(-90deg);
