--- a/src/main/webapp/css/virkailija.css
+++ b/src/main/webapp/css/virkailija.css
@@ -1950,7 +1950,7 @@ table.dropmenu-table {
   display: block; }
 
 /*
-	Taulukko tyyli perustietojen näyttämiselle, esim. hakijan henkilötietot
+	Taulukko tyyli perustietojen nï¿½yttï¿½miselle, esim. hakijan henkilï¿½tietot
 */
 .perustieto-table {
   width: 100%; }
@@ -3867,13 +3867,13 @@ ol.sortable {
   margin: 5px 0 0 0;
   padding: 0; }
 
-.sortable li div {
+.sortable li > div {
   border: 1px solid #d4d4d4;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
   border-color: #D4D4D4 #D4D4D4 #BCBCBC;
-  padding: 6px;
+  padding: 1px;
   margin: 0;
   cursor: move;
   background: #f6f6f6;
@@ -3884,11 +3884,9 @@ ol.sortable {
   background: -ms-linear-gradient(top, white 0%, #f6f6f6 47%, #ededed 100%);
   background: linear-gradient(to bottom, white 0%, #f6f6f6 47%, #ededed 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ededed',GradientType=0 ); }
-
-.sortable li div {
-  background: -moz-linear-gradient(top, white 0%, #f6f6f6 47%, #f0ece9 100%);
-  background: -webkit-linear-gradient(top, white 0%, #f6f6f6 47%, #f0ece9 100%); }
-
+ul.dropmenu-list {
+	width: 240px;
+}
 li.uiCollapsed.mjs-nestedSortable-hovering div {
   border-color: #999;
   background: #fafafa; }
