--- a/src/main/webapp/css/virkailija.css
+++ b/src/main/webapp/css/virkailija.css
@@ -1949,7 +1949,7 @@ table.dropmenu-table {
   display: block; }
 
 /*
-	Taulukko tyyli perustietojen nï¿½yttï¿½miselle, esim. hakijan henkilï¿½tietot
+	Taulukko tyyli perustietojen näyttämiselle, esim. hakijan henkilötietot
 */
 .perustieto-table {
   width: 100%; }
@@ -3125,11 +3125,24 @@ ul.orgmenu {
 
 /*** Valintalaskenta historia
 ************************************************/
-#valintalaskentaHistoria {
+.valintalaskentaHistoria {
   list-style-type: none;
-  padding-left: 20px; }
-  #valintalaskentaHistoria ul {
+  padding-left: 10px; }
+  .valintalaskentaHistoria .avaimet {
+    width: 60%;
+    overflow: scroll;
+    max-height: 300px;
+    border: 1px solid #eee;
+    padding-left: 10px; }
+    .valintalaskentaHistoria .avaimet li:nth-child(even) {
+      background-color: #f8f8f8; }
+  .valintalaskentaHistoria ul {
     list-style-type: none; }
+  .valintalaskentaHistoria > li {
+    padding-top: 0.5em;
+    padding-bottom: 0.5em; }
+  .valintalaskentaHistoria .alikaavat {
+    position: relative; }
 
 /*** Itemtree
 ************************************************/
@@ -3874,9 +3887,28 @@ ol.sortable {
   margin: 5px 0 0 0;
   padding: 0; }
 
-ul.dropmenu-list {
-	width: 240px;
-}
+.sortable li div {
+  border: 1px solid #d4d4d4;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  border-color: #D4D4D4 #D4D4D4 #BCBCBC;
+  padding: 6px;
+  margin: 0;
+  cursor: move;
+  background: #f6f6f6;
+  background: -moz-linear-gradient(top, white 0%, #f6f6f6 47%, #ededed 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, white), color-stop(47%, #f6f6f6), color-stop(100%, #ededed));
+  background: -webkit-linear-gradient(top, white 0%, #f6f6f6 47%, #ededed 100%);
+  background: -o-linear-gradient(top, white 0%, #f6f6f6 47%, #ededed 100%);
+  background: -ms-linear-gradient(top, white 0%, #f6f6f6 47%, #ededed 100%);
+  background: linear-gradient(to bottom, white 0%, #f6f6f6 47%, #ededed 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ededed',GradientType=0 ); }
+
+.sortable li div {
+  background: -moz-linear-gradient(top, white 0%, #f6f6f6 47%, #f0ece9 100%);
+  background: -webkit-linear-gradient(top, white 0%, #f6f6f6 47%, #f0ece9 100%); }
+
 li.uiCollapsed.mjs-nestedSortable-hovering div {
   border-color: #999;
   background: #fafafa; }
