--- a/src/main/webapp/css/virkailija.css
+++ b/src/main/webapp/css/virkailija.css
@@ -3143,6 +3143,36 @@ ul.orgmenu {
     padding-bottom: 0.5em; }
   .valintalaskentaHistoria .alikaavat {
     position: relative; }
+  .valintalaskentaHistoria .folder-closed {
+    height: 18px;
+    width: 18px;
+    background-image: url(../img/18x18-ui-icons.png);
+    background-position: 0 0;
+    display: inline-block;
+    position: relative;
+    top: 3px;
+    left: 10px; }
+  .valintalaskentaHistoria .folder-open {
+    height: 18px;
+    width: 18px;
+    background-image: url(../img/18x18-ui-icons.png);
+    background-position: -18px 0;
+    display: inline-block;
+    position: relative;
+    top: 3px;
+    left: 10px; }
+  .valintalaskentaHistoria .funktio {
+    height: 18px;
+    width: 18px;
+    background-image: url(../img/18x18-ui-icons.png);
+    background-position: -90px 0;
+    display: inline-block;
+    position: relative;
+    top: 3px;
+    left: 10px; }
+  .valintalaskentaHistoria .decorate {
+    background: #f8f8f8;
+    border: 1px solid #ccc; }
 
 /*** Itemtree
 ************************************************/
