--- a/src/main/webapp/css/virkailija.css
+++ b/src/main/webapp/css/virkailija.css
@@ -3162,6 +3162,24 @@ ul.orgmenu {
     position: relative;
     top: 3px;
     left: 10px; }
+  .valintalaskentaHistoria .keys-open {
+    height: 18px;
+    width: 18px;
+    background-image: url(../img/18x18-ui-icons.png);
+    background-position: -108px 0;
+    display: inline-block;
+    position: relative;
+    top: 3px;
+    left: 10px; }
+  .valintalaskentaHistoria .keys-closed {
+    height: 18px;
+    width: 18px;
+    background-image: url(../img/18x18-ui-icons.png);
+    background-position: -126px 0;
+    display: inline-block;
+    position: relative;
+    top: 3px;
+    left: 10px; }
   .valintalaskentaHistoria .funktio {
     height: 18px;
     width: 18px;
