--- a/src/main/webapp/css/virkailija.css
+++ b/src/main/webapp/css/virkailija.css
@@ -2315,6 +2315,38 @@ button.edit-link {
   .remove span {
     display: none; }
 
+.modal {
+  border: 1px solid #bdbdbd;
+  padding: 10px;
+  background-color: #fff;
+  z-index: 1050;
+  position: absolute;
+  opacity: 1;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -o-border-radius: 3px;
+  -ms-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.5);
+  -o-box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.5);
+  -ms-box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5);
+  -o-box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5);
+  -ms-box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5); }
+  .modal .modal-content {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 1040;
+    background-color: #333;
+    opacity: 0.8; }
+
 /*** Pagination
 ************************************************/
 .pagination a {
