VT-504: henkilötiedot näkymän edistämistä

--- a/src/main/webapp/css/virkailija.css
+++ b/src/main/webapp/css/virkailija.css
@@ -1409,7 +1409,6 @@ dl {
   margin: 0 0 1em;
   padding: 0; }
   dl dt {
-    font-weight: bold;
     line-height: 1.5em;
     height: 1.5em;
     width: 173px;
@@ -2315,32 +2314,36 @@ button.edit-link {
   .remove span {
     display: none; }
 
-.modal {
-  border: 1px solid #bdbdbd;
-  padding: 10px;
-  background-color: #fff;
-  z-index: 1050;
+.modal-backdrop {
   position: absolute;
-  opacity: 1;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -o-border-radius: 3px;
-  -ms-border-radius: 3px;
-  border-radius: 3px;
-  -webkit-box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5);
-  -o-box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5);
-  -ms-box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5);
-  box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5); }
-  .modal .modal-content {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    z-index: 1040;
-    background-color: #333;
-    opacity: 0.8; }
+  background-color: #000;
+  opacity: 0.5; }
+  .modal-backdrop .modal {
+    border: 1px solid #bdbdbd;
+    padding: 10px;
+    background-color: #fff;
+    z-index: 1050;
+    position: absolute;
+    opacity: 1;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -o-border-radius: 3px;
+    -ms-border-radius: 3px;
+    border-radius: 3px;
+    -webkit-box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5);
+    -o-box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5);
+    -ms-box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5); }
+    .modal-backdrop .modal .modal-content {
+      position: fixed;
+      top: 0;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      z-index: 1040;
+      background-color: #333;
+      opacity: 0.8; }
 
 /*** Pagination
 ************************************************/
