--- a/src/main/webapp/css/virkailija.css
+++ b/src/main/webapp/css/virkailija.css
@@ -2322,7 +2322,7 @@ button.edit-link {
   width: 100%;
   height: 100%; }
 
-modal {
+.modal {
   border: 1px solid #bdbdbd;
   padding: 10px;
   background-color: #fff;
@@ -2339,7 +2339,7 @@ modal {
   -o-box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5);
   -ms-box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5);
   box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5); }
-  modal .modal-content {
+  .modal .modal-content {
     position: fixed;
     top: 0;
     right: 0;
