--- a/src/main/webapp/css/virkailija.css
+++ b/src/main/webapp/css/virkailija.css
@@ -2314,11 +2314,13 @@ button.edit-link {
   .remove span {
     display: none; }
 
-.modalbackdrop {
+.modal-backdrop {
   position: fixed;
+  left: 0;
+  top: 0;
   background-color: #000;
   opacity: 0.5;
-  z-index: 1049;
+  z-index: 10049;
   width: 100%;
   height: 100%; }
 
@@ -2326,7 +2328,7 @@ button.edit-link {
   border: 1px solid #bdbdbd;
   padding: 10px;
   background-color: #fff;
-  z-index: 1050;
+  z-index: 10050;
   position: absolute;
   opacity: 1;
   -webkit-border-radius: 3px;
