--- a/src/main/webapp/css/virkailija.css
+++ b/src/main/webapp/css/virkailija.css
@@ -1430,7 +1430,9 @@ dl {
 #application-wrapper {
   min-width: 1200px;
   margin: 0 auto;
-  background-color: none; }
+  background-color: none;
+  padding-left: 20px;
+  padding-right: 20px; }
 
 /*** Textarea
 *************************************/
