--- a/src/main/webapp/css/virkailija.css
+++ b/src/main/webapp/css/virkailija.css
@@ -1385,48 +1385,20 @@ table {
   to {
     opacity: 0; } }
 
-/*
-@-webkit-keyframes hidetoolbarcontainer {
-	from {
-		width: 90%;
-	}
+.smoothToggle.ng-hide-add, .smoothToggle.ng-hide-remove {
+  -webkit-transition: 0.5s linear all;
+  -moz-transition: 0.5s linear all;
+  -o-transition: 0.5s linear all;
+  transition: 0.5s linear all; }
+.smoothToggle.ng-hide-remove {
+  opacity: 0; }
+.smoothToggle.ng-hide-remove-active {
+  opacity: 1; }
+.smoothToggle.ng-hide-add {
+  opacity: 1; }
+.smoothToggle.ng-hide-add-active {
+  opacity: 0; }
 
-	to {
-		width: 0%;
-	}
-}
-
-@keyframes hidetoolbarcontainer {
-	from {
-		width: 90%;
-	}
-
-	to {
-		width: 0%;
-	}
-}
-
-@-webkit-keyframes showtoolbarcontainer {
-	from {
-		width: 0%;
-	}
-
-	to {
-		width: 90%;
-	}
-}
-
-
-@keyframes showtoolbarcontainer {
-	from {
-		width: 0%;
-	}
-
-	to {
-		width: 90%;
-	}
-}
-*/
 body {
   font-family: helvetica, arial, sans-serif;
   font-size: 13px;
