--- a/src/main/webapp/css/virkailija.css
+++ b/src/main/webapp/css/virkailija.css
@@ -2319,6 +2319,22 @@ button.edit-link {
   .remove span {
     display: none; }
 
+.plainBtn {
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -o-transition: 0.3s;
+  -ms-transition: 0.3s;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -o-transition: 0.3s;
+  -ms-transition: 0.3s;
+  transition: 0.3s; }
+  .plainBtn:hover {
+    text-decoration: underline;
+    font-weight: bold; }
+
 /*** Spinner
 ************************************************/
 .spinner {
