OVT-4800: hyödynnetään yhtä valintaryhmä-servicen tilaa, eikä tehdä samaa rest-kutsua eri näkymissä. Tiedot tallennettu -ilmoitus lisätty

--- a/src/main/webapp/css/virkailija.css
+++ b/src/main/webapp/css/virkailija.css
@@ -4175,3 +4175,22 @@ div.tilaParial:after, div.henkiloPartial:after {
   opacity: 1; }
 .include-reveal-animation.ng-leave.ng-leave-active {
   opacity: 0; }
+
+.animate-if {
+  background: white;
+  border: 1px solid black;
+  padding: 10px; }
+
+.animate-if.ng-enter, .animate-if.ng-leave {
+  -webkit-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.3s;
+  -moz-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.3s;
+  -o-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.3s;
+  transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.3s; }
+
+.animate-if.ng-enter,
+.animate-if.ng-leave.ng-leave-active {
+  opacity: 0; }
+
+.animate-if.ng-enter.ng-enter-active,
+.animate-if.ng-leave {
+  opacity: 1; }
